remove comments, horizontal scroll issue use custom css

--- a/ideas/sketch/css/main.css
+++ b/ideas/sketch/css/main.css
@@ -2,5 +2,10 @@ i.emoji_icon,i.emoji {
     color: blue;
 }
 
-
-
+#modal_header{
+    font-size: smaller;
+     border: none;
+}
+div.hiddendiv.common {
+    width: 100% !important;
+}
